--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_tutorial.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_tutorial.xml
@@ -4,15 +4,26 @@
     android:id="@+id/lnrRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/onboarding_1"
     android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/onboardingImageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/onboarding_1" />
+
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="35dp"
         android:layout_marginTop="10dp">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/tutorial_gradient" />
 
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/txvTitle"
@@ -32,7 +43,7 @@
             android:id="@+id/txvDesc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/getStartedTextView"
+            android:layout_alignParentBottom="true"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp"
             android:gravity="center"
@@ -48,7 +59,7 @@
             android:id="@+id/tutorial_desc_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/getStartedTextView"
+            android:layout_alignParentBottom="true"
             android:layout_marginTop="16dp"
             android:gravity="center"
             android:orientation="horizontal">
@@ -85,7 +96,7 @@
             android:id="@+id/tutorial_desc_2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/getStartedTextView"
+            android:layout_alignParentBottom="true"
             android:layout_marginTop="16dp"
             android:gravity="center"
             android:orientation="horizontal"
@@ -182,7 +193,7 @@
             android:id="@+id/tutorial_desc_3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/getStartedTextView"
+            android:layout_alignParentBottom="true"
             android:layout_marginTop="16dp"
             android:gravity="center"
             android:orientation="horizontal"
@@ -234,7 +245,7 @@
             android:id="@+id/tutorial_desc_4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/getStartedTextView"
+            android:layout_alignParentBottom="true"
             android:layout_marginTop="16dp"
             android:gravity="center"
             android:orientation="horizontal"
@@ -282,91 +293,6 @@
                 app:fontName="oswald_regular.ttf" />
         </LinearLayout>
 
-        <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/getStartedTextView"
-            android:layout_width="175dp"
-            android:layout_height="45dp"
-            android:layout_above="@+id/alreadyMemberTextView"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/get_started_button_bg"
-            android:gravity="center"
-            android:text="@string/onboarding.get_started"
-            android:textColor="@color/onboarding.get_started"
-            android:textSize="19sp"
-            app:fontName="oswald_regular.ttf" />
-
-        <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/alreadyMemberTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/signinTextView"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
-            android:text="@string/onboarding.already_member"
-            android:textColor="@color/onboarding.already_member"
-            android:textSize="13sp"
-            app:fontName="open_sans.ttf" />
-
-        <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/signinTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/indicator_layout"
-            android:layout_centerHorizontal="true"
-            android:padding="8dp"
-            android:text="@string/onboarding.signin"
-            android:textColor="@color/onboarding.sign_in"
-            android:textSize="14sp"
-            app:fontName="open_sans_bold.ttf" />
-
-        <LinearLayout
-            android:id="@+id/indicator_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/one"
-                android:layout_width="6dp"
-                android:layout_height="6dp"
-                android:alpha="0.5"
-                android:src="@drawable/white_filled_bg"
-                android:tag="1"
-                android:tint="@color/onboarding.already_member" />
-
-            <ImageView
-                android:id="@+id/two"
-                android:layout_width="6dp"
-                android:layout_height="6dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:alpha="0.5"
-                android:src="@drawable/white_filled_bg"
-                android:tag="2"
-                android:tint="@color/onboarding.already_member" />
-
-            <ImageView
-                android:id="@+id/three"
-                android:layout_width="6dp"
-                android:layout_height="6dp"
-                android:layout_marginRight="5dp"
-                android:alpha="0.5"
-                android:src="@drawable/white_filled_bg"
-                android:tag="3"
-                android:tint="@color/onboarding.already_member" />
-
-            <ImageView
-                android:id="@+id/four"
-                android:layout_width="6dp"
-                android:layout_height="6dp"
-                android:alpha="0.5"
-                android:src="@drawable/white_filled_bg"
-                android:tag="4"
-                android:tint="@color/onboarding.already_member" />
-        </LinearLayout>
     </RelativeLayout>
 
 </RelativeLayout>
