--- a/MyCity4Kids/MyCity4Kids/res/layout/subscribe_topics_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/subscribe_topics_activity.xml
@@ -53,28 +53,44 @@
         android:layout_below="@+id/toolbar"
         android:background="@color/light_underline" />
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tab_layout"
+    <ListView
+        android:id="@+id/popularTopicsListView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbarUnderline"
-        android:background="?attr/colorPrimary"
-        android:elevation="3dp"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:tabIndicatorColor="@color/home.trending.tabbar_indicator"
-        app:tabIndicatorHeight="3dp"
-        app:tabMode="scrollable"
-        app:tabSelectedTextColor="@color/home.trending.tabbar_text"
-        app:tabTextAppearance="@style/CustomTabText"
-        app:tabTextColor="@color/home.trending.tabbar_text" />
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="match_parent"
         android:layout_above="@+id/bottombarUnderline"
-        android:layout_below="@id/tab_layout" />
+        android:layout_below="@+id/toolbarUnderline"
+        android:background="@color/white"
+        android:divider="@null"
+        android:listSelector="@color/transparent" />
+    <!--<View-->
+    <!--android:id="@+id/toolbarUnderline"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="1dp"-->
+    <!--android:layout_below="@+id/toolbar"-->
+    <!--android:background="@color/light_underline" />-->
+
+    <!--<android.support.design.widget.TabLayout-->
+    <!--android:id="@+id/tab_layout"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_below="@+id/toolbarUnderline"-->
+    <!--android:background="?attr/colorPrimary"-->
+    <!--android:elevation="3dp"-->
+    <!--android:minHeight="?attr/actionBarSize"-->
+    <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
+    <!--app:tabIndicatorColor="@color/home.trending.tabbar_indicator"-->
+    <!--app:tabIndicatorHeight="3dp"-->
+    <!--app:tabMode="scrollable"-->
+    <!--app:tabSelectedTextColor="@color/home.trending.tabbar_text"-->
+    <!--app:tabTextAppearance="@style/CustomTabText"-->
+    <!--app:tabTextColor="@color/home.trending.tabbar_text" />-->
+
+    <!--<android.support.v4.view.ViewPager-->
+    <!--android:id="@+id/pager"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="fill_parent"-->
+    <!--android:layout_above="@+id/bottombarUnderline"-->
+    <!--android:layout_below="@id/tab_layout" />-->
 
     <View
         android:id="@+id/bottombarUnderline"
