--- a/MyCity4Kids/MyCity4Kids/res/values/color.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/color.xml
@@ -449,4 +449,6 @@
     <color name="short_story.card_bg_4">#f1fbeb</color>
     <color name="short_story.card_bg_5">#fdf5f8</color>
     <color name="short_story.card_bg_6">#fbfbee</color>
+
+    <color name="white_opacity">#80FFFFFF</color>
 </resources>
