--- a/MyCity4Kids/MyCity4Kids/res/layout/group_about_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_about_item.xml
@@ -13,9 +13,10 @@
         android:layout_marginTop="15dp"
         android:ellipsize="end"
         android:gravity="left"
+        android:lineSpacingExtra="3dp"
         android:text=""
         android:textColor="@color/black"
-        android:textSize="14sp"
+        android:textSize="16sp"
         app:fontName="georgia.ttf" />
 
     <com.mycity4kids.widget.CustomFontTextView
