--- a/MyCity4Kids/MyCity4Kids/res/drawable/selector_write_blog_tab.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/selector_write_blog_tab.xml
@@ -2,5 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@drawable/tab3_selected" android:state_checked="true" />
     <item android:drawable="@drawable/tab3_selected" android:state_pressed="true" />
-    <item android:drawable="@drawable/tab3" />
+    <item android:drawable="@drawable/navigation_create_button" />
 </selector>
