--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_mc4k_home_new.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_mc4k_home_new.xml
@@ -12,6 +12,7 @@
         android:elevation="3dp"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:tabGravity="fill"
         app:tabIndicatorColor="@color/home.trending.tabbar_indicator"
         app:tabIndicatorHeight="3dp"
         app:tabMode="scrollable"
