--- a/MyCity4Kids/MyCity4Kids/res/layout/explore_topics_grid_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/explore_topics_grid_item.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.mycity4kids.widget.TopicsSquareView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/imvAuthorThumbContainer"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/tagImageView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="110dp"
             android:scaleType="center"
             android:src="@drawable/default_article" />
 
         <View
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="110dp"
             android:background="@color/explore_listing.topics.layer" />
 
         <com.mycity4kids.widget.CustomFontTextView
@@ -37,10 +37,10 @@
 
         <View
             android:id="@+id/selectorView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="110dp"
             android:background="@color/white_opacity"
             android:visibility="gone" />
     </RelativeLayout>
 
-</com.mycity4kids.widget.TopicsSquareView>
+</LinearLayout>
