--- a/MyCity4Kids/MyCity4Kids/res/layout/article_details_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_details_fragment.xml
@@ -284,24 +284,106 @@
                 android:layout_below="@+id/tagsLayoutContainer"
                 android:background="@color/light_underline" />
 
+            <RelativeLayout
+                android:id="@+id/groupHeaderView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/adViewSeparator"
+                android:background="@color/white">
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="2dp"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginRight="12dp"
+                    android:layout_marginTop="10dp"
+                    app:cardCornerRadius="0dp"
+                    app:cardElevation="0dp">
+
+                    <ImageView
+                        android:id="@+id/groupHeaderImageView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:adjustViewBounds="true"
+                        android:paddingBottom="5dp"
+                        android:paddingTop="5dp"
+                        android:src="@drawable/groups_generic" />
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <com.mycity4kids.widget.CustomFontTextView
+                            android:id="@+id/groupHeadingTextView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="20dp"
+                            android:layout_marginLeft="20dp"
+                            android:layout_marginRight="20dp"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginTop="40dp"
+                            android:text="@string/groups.join_support_gp"
+                            android:textColor="@color/white"
+                            android:textSize="20sp"
+                            app:fontName="oswald_regular.ttf" />
+
+                        <com.mycity4kids.widget.CustomFontTextView
+                            android:id="@+id/groupSubHeadingTextView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/groupHeadingTextView"
+                            android:layout_marginEnd="20dp"
+                            android:layout_marginLeft="20dp"
+                            android:layout_marginRight="20dp"
+                            android:layout_marginStart="20dp"
+                            android:text="@string/groups.not_alone"
+                            android:textColor="@color/white"
+                            android:textSize="14sp"
+                            app:fontName="oswald.ttf" />
+
+                        <com.mycity4kids.widget.CustomFontTextView
+                            android:id="@+id/joinGroupTextView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/groupSubHeadingTextView"
+                            android:layout_marginLeft="20dp"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginTop="20dp"
+                            android:background="@drawable/red_rect_bg"
+                            android:gravity="center"
+                            android:paddingBottom="10dp"
+                            android:paddingLeft="20dp"
+                            android:paddingRight="20dp"
+                            android:paddingTop="10dp"
+                            android:text="@string/groups.join_group"
+                            android:textColor="@color/white"
+                            android:textSize="14sp"
+                            app:fontName="oswald_regular.ttf" />
+                    </RelativeLayout>
+                </android.support.v7.widget.CardView>
+            </RelativeLayout>
+
             <LinearLayout
                 android:id="@+id/native_ad_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/adViewSeparator"
-                android:orientation="vertical" />
+                android:orientation="vertical"
+                android:visibility="gone" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_below="@+id/native_ad_container"
+                android:layout_below="@+id/groupHeaderView"
                 android:background="#f2f2f2" />
 
             <LinearLayout
                 android:id="@+id/recentAuthorArticles"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/native_ad_container"
+                android:layout_below="@+id/groupHeaderView"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
