Groups post text formatting fixes + crash fixes + scroll issue in commenting

--- a/MyCity4Kids/MyCity4Kids/res/layout/group_post_comment_cell_test.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_post_comment_cell_test.xml
@@ -50,7 +50,7 @@
             android:textSize="@dimen/ad_comments_username"
             app:fontName="oswald_regular.ttf" />
 
-        <com.mycity4kids.widget.CustomFontTextView
+        <com.mycity4kids.widget.LinkifiedTextView
             android:id="@+id/commentDataTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
