--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_text_post_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_text_post_item.xml
@@ -70,7 +70,7 @@
         android:src="@drawable/ic_more"
         android:tint="@color/groups.blue_color" />
 
-    <com.mycity4kids.widget.CustomFontTextView
+    <com.mycity4kids.widget.LinkifiedTextView
         android:id="@+id/postDataTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
