--- a/MyCity4Kids/MyCity4Kids/res/values/color.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/color.xml
@@ -5,6 +5,7 @@
     <color name="app_dark_black">#333333</color>
     <color name="app_grey">#9c9dac</color>
     <color name="app_blue">#507cbe</color>
+    <color name="app_nav_bg">#f4eded</color>
 
     <color name="a_light_blue">#e3eaff</color>
     <color name="a_light_pink">#ffedf0</color>
@@ -39,18 +40,12 @@
     <color name="slider_txt_color">#696969</color>
     <color name="hint_txt_color">#CFCFCF</color>
 
-
     <color name="light_grey1">#E4E8F1</color>
 
     <color name="home_light_blue">#1c55f1</color>
 
-    <!-- Business Details Screen - Info tab -->
     <color name="event_divider_color">#d3d3d3</color>
     <color name="new_background_color">#f0f4ff</color>
-    <!-- new color strings -->
-    <!-- <color name="primary">#1d55f1</color>-->
-    <!--<color name="primary">#4185f2</color>-->
-    <!--<color name="primary_dark">#0c4cb1</color>-->
 
     <color name="primary_blue">#4185f2</color>
     <color name="primary">#FFFFFF</color>
@@ -64,13 +59,10 @@
     <color name="greytxt_color">#616161</color>
     <color name="new_blue">#4056DA</color>
 
-
-    <!--anupama -->
     <color name="tabsScrollColor">#ec3b55</color>
 
     <color name="login_grey">#cccccc</color>
     <color name="login_line_grey">#e0e0e0</color>
-
 
     <color name="ad.title">#333333</color>
     <color name="ad.tags.text">#507cbe</color>
@@ -213,6 +205,7 @@
     <color name="myprofile.following_label">#507cbe</color>
     <color name="myprofile.followers_label">#507cbe</color>
     <color name="myprofile.rank_label">#545454</color>
+    <color name="myprofile.improve_reach">#d79f9f</color>
 
 
     <color name="blogger_profile.name">#545454</color>
@@ -451,4 +444,6 @@
     <color name="short_story.card_bg_6">#fbfbee</color>
 
     <color name="white_opacity">#80FFFFFF</color>
+    <color name="profile_progress">#f2f2f2</color>
+
 </resources>
