--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_fragment.xml
@@ -40,7 +40,7 @@
             android:layout_marginRight="10dp"
             android:gravity="center"
             android:horizontalSpacing="15dp"
-            android:numColumns="2"
+            android:nestedScrollingEnabled="false"
             android:stretchMode="columnWidth"
             android:verticalSpacing="15dp"
             android:visibility="visible" />
@@ -82,7 +82,7 @@
             android:layout_marginRight="10dp"
             android:gravity="center"
             android:horizontalSpacing="15dp"
-            android:numColumns="2"
+            android:nestedScrollingEnabled="false"
             android:stretchMode="columnWidth"
             android:verticalSpacing="15dp"
             android:visibility="visible" />
