--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_text_post_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_text_post_item.xml
@@ -52,6 +52,7 @@
         android:layout_marginTop="2dp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
+        android:inputType="textMultiLine"
         android:text=""
         android:textColor="@color/ad.comment.body"
         android:textSize="12sp"
