--- a/MyCity4Kids/MyCity4Kids/res/values-v19/style.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-v19/style.xml
@@ -12,5 +12,14 @@
         <item name="android:textColorTertiaryInverse">#4056DA</item>
     </style>
 
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="android:windowBackground">@color/transparent</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
 
 </resources>
