--- a/MyCity4Kids/MyCity4Kids/res/drawable/mainprofile_thin_border.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/mainprofile_thin_border.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <stroke
         android:width="1dp"
-        android:color="#d3d3d3" />
+        android:color="#A9A9A9" />
     <corners android:radius="5dp" />
     <solid android:color="#fff" />
 
